--- a/mdpulltorefresh/src/main/res/layout/view_loading.xml
+++ b/mdpulltorefresh/src/main/res/layout/view_loading.xml
@@ -5,10 +5,11 @@
     android:gravity="center"
     android:orientation="horizontal">
 
-    <ProgressBar
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical" />
+    <ImageView
+        android:id="@+id/cicle_iv"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/loading" />
 
     <TextView
         android:layout_width="wrap_content"
