1、添加缓存机制，2、修改下拉刷新的部分效果

--- a/app/src/main/res/layout/item_main_rcv.xml
+++ b/app/src/main/res/layout/item_main_rcv.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="48dp">
 
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="130dp"
+        android:layout_height="match_parent"
+        android:gravity="center" />
+
+    <ImageView
+        android:id="@+id/logo_iv"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="13dp"/>
 </RelativeLayout>
