--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,15 @@
     tools:context="com.cowinclub.dingdong.MainActivity">
 
     <com.cowinclub.dingdong.mdpulltorefresh.MDPullToRefresh
+        android:id="@+id/refresh_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary"></ListView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/main_recycleview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#ff9900">
 
         </android.support.v7.widget.RecyclerView>
 
